# luhsoccer_baguette

./: .clang-format  .clang-tidy  .clangd  .gitignore  .gitlab-ci.yml  .gitmodules  CMakeLists.txt  CMakePresets.json  CODEOWNERS  DEVELOPMENT.md  README.md  TSAN_OPTIONS  bootstrap  bootstrap.bat  build_python.sh  jreleaser.yml  patch_wheels.sh  pyproject.toml  run_python_tests.sh  start_gc.sh  start_sim.bat  start_sim.sh  upload_wheels.sh  vcpkg.json
benchmarks/: CMakeLists.txt
benchmarks/transform/: benchmark_world_model.cpp
modules/: .clang-tidy  CMakeLists.txt  README.md
modules/__template/: CMakeLists.txt
modules/__template/include/__template/: __template.hpp
modules/__template/src/: __template.cpp
modules/baguette/: CMakeLists.txt  README.md
modules/baguette/include/: baguette.hpp
modules/baguette/src/: baguette.cpp  main.cpp
modules/config_provider/: CMakeLists.txt  README.md
modules/config_provider/include/config/: .clang-tidy  ball_filter_config.hpp  config_store.hpp  config_structs.hpp  game_config.hpp  game_data_provider_config.hpp  local_planner_components_config.hpp  local_planner_visualization_config.hpp  luhviz_config.hpp  luhviz_internal_config.hpp  observer_config.hpp  robot_control_config.hpp  robot_control_visualization_config.hpp  robot_interface_config.hpp  simulation_interface_config.hpp  skills_config.hpp  ssl_interface_config.hpp  (+1 more)
modules/config_provider/src/: config_store.cpp  utility.cpp
modules/core/: CMakeLists.txt  README.md
modules/core/src/: core.cpp
modules/event_system/: CMakeLists.txt  README.md
modules/event_system/src/: event_system.cpp  event_system_helper.cpp
modules/exception_handler/: CMakeLists.txt  README.md
modules/exception_handler/src/: exception_handler.cpp
modules/experiment_logger/: CMakeLists.txt  README.md
modules/experiment_logger/src/: experiment_logger.cpp
modules/game_controller_interface/: CMakeLists.txt  README.md
modules/game_controller_interface/src/: game_controller_interface.cpp  game_controller_interface_impl.cpp  game_controller_interface_impl.hpp
modules/game_data_provider/: CMakeLists.txt  README.md
modules/game_data_provider/src/: ball_filter.cpp  ball_filter.hpp  data_processor.hpp  game_data_provider.cpp  robot_data_filter.cpp  robot_data_filter.hpp
modules/local_planner/: CMakeLists.txt  README.md
modules/local_planner/doc/: agents.md  local_panner.md  skills.md  task_data.md
modules/local_planner/src/: agent.cpp  avoidance_manager.cpp  avoidance_manager_unit.cpp  local_planner.cpp  local_planner_module.cpp  robot_dynamic.cpp  simulation_manager.cpp  simulator.cpp  thread_pool.cpp
modules/local_planner_components/: CMakeLists.txt  README.md
modules/logger/: CMakeLists.txt  README.md
modules/logger/src/: gui_callback.cpp  gui_sink.hpp  logger.cpp
modules/luhviz/: CMakeLists.txt  README.md
modules/luhviz/src/: README.md  data_proxy.cpp  luhviz.cpp
modules/marker_service/: CMakeLists.txt  README.md
modules/marker_service/src/: marker.cpp  marker_2d_impl.cpp  marker_service.cpp  marker_test.cpp
modules/precompiled_headers/: CMakeLists.txt
modules/precompiled_headers/src/: pch.cpp
modules/python_bindings/: CMakeLists.txt  GenerateStubs.cmake  README.md  stubgen.py
modules/python_bindings/src/: bindings.hpp  id_provider.hpp  module_bindings.cpp  python_module.cpp  tool_bindings.cpp
modules/robot_control/: CMakeLists.txt  README.md  robot_accs.yaml
modules/robot_control/src/: color_util.hpp  cooperation_module.cpp  cooperation_module.hpp  marker_adapter.cpp  marker_adapter.hpp  robot_control_module.cpp  robot_controller.cpp  robot_controller.hpp  robot_dynamic.cpp  robot_dynamic.hpp  simulation_manager.cpp  simulation_manager.hpp  simulator.cpp  simulator.hpp
modules/robot_interface/: CMakeLists.txt  README.md
modules/robot_interface/src/: packets.hpp  robot_interface.cpp  robot_interface_types.cpp
modules/role_manager/: CMakeLists.txt  README.md
modules/role_manager/src/: role_manager.cpp
modules/scenario/: CMakeLists.txt  README.md
modules/scenario/src/: random_pos_generator.py  scenario.cpp  scenario_book.cpp  scenario_executor.cpp
modules/simulation_interface/: CMakeLists.txt  README.md
modules/simulation_interface/src/: simulation_connector.cpp  simulation_interface.cpp
modules/skills/: CMakeLists.txt  README.md  create_skill.sh
modules/skills/doc/: examples.md
modules/skills/src/: skill.cpp  skill_library.cpp  skill_tester.cpp
modules/software_manager/: CMakeLists.txt
modules/software_manager/src/: software.hpp  software_manager.cpp
modules/ssl_interface/: CMakeLists.txt  README.md
modules/ssl_interface/src/: ssl_interface.cpp
modules/task_manager/: CMakeLists.txt
modules/task_manager/src/: task_manager.cpp
modules/time/: CMakeLists.txt  README.md
modules/time/src/: calc_time_stopwatch.cpp  time.cpp
modules/transform/: CMakeLists.txt  README.md
modules/transform/doc/: position.md  terminology.md  world_model.md
modules/transform/src/: position.cpp  transform.cpp  world_model.cpp  world_model_helper.cpp
modules/utils/: CMakeLists.txt  README.md
modules/utils/src/: luts.cpp  utils.cpp
modules/vision_processor/: CMakeLists.txt
modules/vision_processor/src/: vision_processor.cpp
tests/: .clang-tidy  CMakeLists.txt  README.md
tests/helper/: id_provider.hpp
tests/local_planner/: component_params_unit_test.cpp
tests/local_planner_components/: world_model_test_helper.cpp  world_model_test_helper.hpp
tests/local_planner_components/shapes/: shape_test_helpers.cpp  shape_test_helpers.hpp  unit_test_arc_shape.cpp  unit_test_circle_shape.cpp  unit_test_compose_shape.cpp  unit_test_line_shape.cpp  unit_test_point_shape.cpp  unit_test_rectangle_shape.cpp
tests/local_planner_components/steps/: unit_test_condition_step.cpp  unit_test_wait_step.cpp
tests/marker_service/: unit_test.cpp
tests/observer/: unit_test_static_observer.cpp
tests/template/: unit_test.cpp
tests/time/: unit_test.cpp
tests/transform/: unit_test_circular_buffer.cpp  unit_test_position.cpp  unit_test_transform.cpp
(+640 files in other folders)
