# This file is only for adding the modules into cmake
# For a new module just add it via add_subdirectory(...)
# E.g.: add_subdirectory(__template) for the __template folder

add_subdirectory(precompiled_headers)
add_subdirectory(utils)
add_subdirectory(logger)
add_subdirectory(luhviz)
add_subdirectory(config_provider)
add_subdirectory(exception_handler)
add_subdirectory(game_controller_interface)
add_subdirectory(baguette)
add_subdirectory(time)
add_subdirectory(transform)
add_subdirectory(ssl_interface)
add_subdirectory(simulation_interface)
add_subdirectory(marker_service)
add_subdirectory(game_data_provider)
add_subdirectory(robot_interface)
add_subdirectory(local_planner)
add_subdirectory(local_planner_components)
add_subdirectory(skills)
add_subdirectory(role_manager)
add_subdirectory(experiment_logger)
add_subdirectory(scenario)
add_subdirectory(python_bindings)
add_subdirectory(task_manager)